# refactor-notebooks

./: .gitignore  .pre-commit-config.yaml  Codespace-handson.md  DS-project-structure-tools.md  Makefile  README.md  pyproject.toml
.dvc/: config
config/: pipeline.yaml
data/01_raw/: .gitignore  online_retail.xlsx.dvc
data/02_processed/: .gitignore  clean_retail.csv.dvc
docs/api/: search.js  src.html
docs/api/src/: ingest.html  pipeline.html  transform.html  utils.html
docs/mds/: Better-tools.md
notebooks/: Factored_notebook.ipynb  Original_OnlineRetail_Cohort-Copy1.ipynb  Original_OnlineRetail_Cohort-Copy1.py  Original_OnlineRetail_Cohort.ipynb  interactive_dev_nb.ipynb
outputs/2023-02-02/11-34-45/.hydra/: hydra.yaml
outputs/2023-02-02/12-09-13/.hydra/: hydra.yaml
outputs/2023-02-02/14-40-19/.hydra/: hydra.yaml
outputs/2023-02-12/09-24-32/.hydra/: hydra.yaml
outputs/2023-02-12/09-30-58/.hydra/: hydra.yaml
outputs/2023-02-12/12-28-14/.hydra/: config.yaml  hydra.yaml
src/: __init__.py  ingest.py  pipeline.py  transform.py  utils.py
tests/: __init__.py  conftest.py  test_ingest.py  test_utils.py
