[tool.poetry]
name = "demo-notebook-refactor"
version = "0.1.0"
description = "Demo of refactoring notebooks"
authors = ["anhdang"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
dvc = "^2.43.1"
dvc-gs = "^2.21.1"
hydra-core = "^1.3.1"
openpyxl = "^3.1.0"
pre-commit = "^3.0.3"
pdoc = "^12.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
